--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta
   <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="stylesheet" href="styles/base.css">
    <title>Potatoes.Latvia</title>
 </head>
 <body>
