added icons and fonts"

--- a/index.html
+++ b/index.html
@@ -2,27 +2,27 @@
 <html>
 <meta utf>
 
-<head>
-  <meta charset="UTF-8">
-  <meta
-  <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
-   <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="stylesheet" href="styles/base.css">
-   <title>Potatoes.Latvia</title>
-</head>
-<body>
-  <h1>{ Welcome to The Site }</h1>
-  <h6>is cold, and also dark...</h6>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <link rel="stylesheet" href="styles/base.css">
+     <title>AJ Reel | Developer</title>
+  </head>
 
-  <nav>
-    <ul>
-      <li><a href="http://www.github.com/waxhoya">GitHub</a></li>
-      <li><a href="http://www.reddit.com/u/root_hat">Reddit!</a></li>
-      <li><a href="http://stackoverflow.com/users/5987703/aj-pdx">StackOverflow</a></li>
-      <li><a href="https://teamtreehouse.com/albertreel">TeamTreehouse.Com</a></li>
-    </ul>
-  </nav>
+  <body>
+    <h1>{ Welcome to The Site }</h1>
+    <h6>is cold, and also dark...</h6>
+    <nav>
+      <ul>
+        <li><a href="http://www.github.com/waxhoya">GitHub</a></li>
+        <li><a href="http://www.reddit.com/u/root_hat">Reddit!</a></li>
+        <li><a href="http://stackoverflow.com/users/5987703/aj-pdx">StackOverflow</a></li>
+        <li><a href="https://teamtreehouse.com/albertreel">TeamTreehouse.Com</a></li>
+      </ul>
+    </nav>
 
 
-</body>
+  </body>
 </html>
