added icon and framework

--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE>
 <html>
-<meta utf>
-
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
-     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <link rel="stylesheet" href="styles/base.css">
-     <title>AJ Reel | Developer</title>
-  </head>
-
+<head>
+  <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles/base.css">
+  <link rel="stylesheet" href="styles/layout.css">
+  <link rel="stylesheet" href="styles/fonts/fonts.css">
+</head>
   <body>
-    <h1>{ Welcome to The Site }</h1>
-    <h6>is cold, and also dark...</h6>
-    <nav>
+    <header>
+      <title>AJ Reel | Developer</title>
+      <h1>{ Welcome to The Site }</h1>
+      <h6>is cold, and also dark...</h6>
+    </header>
+    <nav class="main-nav">
+      <div class="icon-menu"></div>
       <ul>
-        <li><a href="http://www.github.com/waxhoya">GitHub</a></li>
-        <li><a href="http://www.reddit.com/u/root_hat">Reddit!</a></li>
-        <li><a href="http://stackoverflow.com/users/5987703/aj-pdx">StackOverflow</a></li>
-        <li><a href="https://teamtreehouse.com/albertreel">TeamTreehouse.Com</a></li>
+        <li><a href="http://www.github.com/waxhoya" class="icon-git">GitHub</a></li>
+        <li><a href="http://www.reddit.com/u/root_hat" class="icon-reddit">Reddit!</a></li>
+        <li><a href="http://stackoverflow.com/users/5987703/aj-pdx" class="icon-stackoverflow">StackOverflow</a></li>
+        <li><a href="https://teamtreehouse.com/albertreel" class="icon-stacked">TeamTreehouse.Com</a></li>
       </ul>
     </nav>
 
