JQuery manipulation implemented.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <title>AJ Reel | Developer</title>
         <h1>{ Welcome to The Site }</h1>
         <h6>is cold, and also dark...</h6>
-      </header>
       <nav class="main-nav">
         <div class="icon-menu"></div>
         <ul>
@@ -24,5 +23,15 @@
           <li><a href="https://teamtreehouse.com/albertreel" class="icon-stacked">TeamTreehouse.Com</a></li>
         </ul>
       </nav>
+    </header>
+
+    <main>
+      <section id="blog">
+        <article class="soccerBlog">
+          <title></title>
+          <section class="blogSummery"></section>
+        </article>
+      </section>
+    </main>
     </body>
 </html>
