Debugged obj code and constructor

--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@
         </article>
       </section>
     </main>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="scripts/blogs.js"></script>
+    <script src="scripts/info.js"></script>
     </body>
 </html>
