added icomoon changes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <section id="blog">
         <article class="soccerBlog">
           <title></title>
-          <section class="blogSummery"></section>
+          <div class="blogSummery"></section>
         </article>
       </section>
     </main>
