--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/layout.css">
-    <link rel="stylesheet" href="styles/fonts/fonts.css">
+    <link rel="stylesheet" href="styles/icon.css">
   </head>
     <body>
       <header>
@@ -17,6 +17,8 @@
       <nav class="main-nav">
         <div class="icon-menu"></div>
         <ul>
+          <li><a href="#" class="icon-git">Projects</a></li>
+          <li><a href="#" class="icon-git">Soccer Blog</a></li>
           <li><a href="http://www.github.com/waxhoya" class="icon-git">GitHub</a></li>
           <li><a href="http://www.reddit.com/u/root_hat" class="icon-reddit">Reddit!</a></li>
           <li><a href="http://stackoverflow.com/users/5987703/aj-pdx" class="icon-stackoverflow">StackOverflow</a></li>
