--- a/index.html
+++ b/index.html
@@ -28,15 +28,40 @@
     </header>
 
     <main>
+      <div>
+          <ul id="filters">
+            <li>
+              <select id="author-filter">
+                <option value="">-- Filter by Authors --</option>
+              </select>
+            </li>
+            <li>
+              <select id="category-filter">
+                <option value="">-- Filter by Categories --</option>
+              </select>
+            </li>
+          </ul>
+        </div>
       <section id="blog">
-        <article class="soccerBlog">
-          <title></title>
-          <div class="blogSummery"></section>
-        </article>
+        <script id="blog-template" type="text/x-handle-template">
+          <div class = "entry" data-category="{{category}}" data-author="{{author}}">
+            {{title}}
+            <br>
+            {{author}}
+            <br>
+            {{publishedOn}}
+            {{category}}
+            <br>
+            <br>
+            {{{body}}}
+            <br>
+          </div>
+        </script>
       </section>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="scripts/blogs.js"></script>
     <script src="scripts/info.js"></script>
+    <script src="scripts/filter.js"></script>
     </body>
 </html>
